// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSplitButtonControl is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    aria-label="Open Selections"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    data-test-subj="splitButton--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props fullWidth is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiButton--fullWidth ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    aria-label="Open Selections"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    data-test-subj="splitButton--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;

exports[`OuiSplitButtonControl props isLoading is rendered 1`] = `
<div
  class="ouiSplitButtonControl"
>
  <button
    class="ouiButton ouiButton--primary ouiSplitButtonControl--primary"
    type="button"
  >
    <span
      class="ouiButtonContent ouiButton__content"
    >
      <span
        class="ouiButton__text"
      />
    </span>
  </button>
  <button
    aria-label="Open Selections"
    class="ouiButtonIcon ouiButtonIcon--primary ouiButtonIcon--medium ouiSplitButtonControl--dropdown"
    data-test-subj="splitButton--dropdown"
    type="button"
  >
    <span
      aria-hidden="true"
      class="ouiButtonIcon__icon"
      color="inherit"
      data-ouiicon-type="arrowDown"
    />
  </button>
</div>
`;
